fix: update typo at arangodb
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>